# Chinese_MobileBert_on_SNPE

./: .gitignore  README.md  create_raw.py  mobilebert.py  read_raw.py  test_onnx.py  text2vec.py
data/: Add_221.raw  Add_221.txt  test_13.raw
result/: Gather_1423.txt  embeddings.txt  text2vec_dict_13.txt  text2vec_dict_64.txt
snpe_bert/: Bert.cpp  Bert.h  CMakeLists.txt  config.json  main.cpp  tokenization.cpp  tokenization.h  utils.h
